[package]
name = "andromeda"
version = "0.1.0"
authors = ["Patrick Sullivan <psullivang7@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["game", "engine", "gamedev", "graphics", "hazel"]
categories = ["game-engines", "graphics", "rendering"]
readme = "README.md"

[dependencies]
anyhow = "1.0.41"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = "2.6.0"
slog-term = "2.8.0"
lazy_static = "1.4.0"
glam = "0.17.1"
winit = "0.25.0"

[[example]]
name = "sandbox"
path = "examples/sandbox/main.rs"
test = true