[package]
name = "andromeda"
version = "0.1.0"
authors = ["Patrick Sullivan <psullivang7@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
winit = "0.22.2"
failure = "0.1.8"
wgpu = "0.5.0"
futures = "0.3.4"
shaderc = "0.6"
bytemuck = "1.2.0"
image = "0.22"
imgui = "0.4.0"
imgui-winit-support = "0.4.0"

[dependencies.imgui-wgpu]
version = "0.7.0"

features = ["glsl-to-spirv"]